# CUDASepFB

./: CMakeLists.txt  constants.h  image.h  main.cu
cpu/: CMakeLists.txt  choquet.cpp  choquet.h  computation.cpp  computation.h  image.hxx
gpu/: CMakeLists.txt  choquet.cu  choquet.cuh  computation.cu  computation.cuh  error.cuh
